--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button id="btnComprar">Comprar Ahora</button>
             </div>
             <div class="audiolibro-imagen">
-                <img src="audiolibro-portada.png" alt="Portada de El Poder del Conocimiento">
+                <img src="product-image.jpg" alt="Portada de El Poder del Conocimiento">
             </div>
         </section>
     </main>
