--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Audiolibros</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -32,7 +34,7 @@
                 <button id="btnComprar">Comprar Ahora</button>
             </div>
             <div class="audiolibro-imagen">
-                <img src="product-image.jpg" alt="Portada de El Poder del Conocimiento">
+                <img src="imagen.jpeg" alt="Portada de El Poder del Conocimiento">
             </div>
         </section>
     </main>
